CXBOX-768 Description PickListPopup. (#332)
* CXBOX-768 Description PickListPopup.